--- a/src/hooks/useListenFocusTriggers/__stories__/useListenFocusTriggers.stories.mdx
+++ b/src/hooks/useListenFocusTriggers/__stories__/useListenFocusTriggers.stories.mdx
@@ -17,7 +17,7 @@ import "../../__stories__/general-hooks-stories.scss";
 
 ## Overview
 
-Attaches a listener for focus DOM events on a specific element, firing a provided callbacks when the event are triggered.
+Fire provided callbacks, when focus by mouse or by keyboard happens.
 
 <Canvas>
   <Story name="Overview">
