--- a/src/components/ListItem/__stories__/ListItem.stories.mdx
+++ b/src/components/ListItem/__stories__/ListItem.stories.mdx
@@ -14,6 +14,7 @@ export const metaSettings = createStoryMetaSettings({
 <Meta
   title="Navigation/List/ListItem"
   component={ListItem}
+  subcomponents={{ ListItemIcon, ListItemAvatar }}
   argTypes={metaSettings.argTypes}
   decorators={metaSettings.decorators}
 />
