Fix clickable props display in storybook

--- a/src/components/Clickable/__stories__/Clickable.stories.mdx
+++ b/src/components/Clickable/__stories__/Clickable.stories.mdx
@@ -20,7 +20,7 @@ export const metaSettings = createStoryMetaSettings({
 <Meta
   title="Accessibility/Clickable"
   component={Clickable}
-  argTypes={metaSettings.argTypes}
+  argTypes={{ ...metaSettings.argTypes, children: { control: false } }}
   decorators={metaSettings.decorators}
 />
 
