--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -1,7 +1,17 @@
 import Dialog from "../Dialog";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
-import styles from "./Dialog.stories.module.scss";
+import { createStoryMetaSettings, Link } from "../../../storybook";
+import { Button, DialogContentContainer, IconButton, AttentionBox } from "../../../components";
+import { ExampleContent } from "./helpers";
+import { Info } from "../../Icon/Icons";
+import {
+  MENU,
+  DIALOG_CONTENT_CONTAINER,
+  TOOLTIP
+} from "../../../storybook/components/related-components/component-description-map";
+import Flex from "../../Flex/Flex";
+import { useSwitch } from "../../Switch/hooks/useSwitch";
+import "./Dialog.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
   component: Dialog,
@@ -19,7 +29,37 @@ export const metaSettings = createStoryMetaSettings({
 
 <!--- Component template -->
 
-export const dialogTemplate = createComponentTemplate(Dialog);
+export const dialogTemplate = dialogProps => {
+  const modifiers =
+    // for prevent dialog to move while scrolling
+    [
+      {
+        name: "preventOverflow",
+        options: {
+          mainAxis: false
+        }
+      }
+    ];
+  return (
+    <div className="monday-storybook-dialog--story-padding">
+      <Dialog
+        modifiers={modifiers}
+        shouldShowOnMount
+        {...dialogProps}
+        showTrigger={[Dialog.hideShowTriggers.CLICK]}
+        hideTrigger={[Dialog.hideShowTriggers.CLICK]}
+        position={Dialog.positions.RIGHT}
+        content={
+          <DialogContentContainer>
+            <ExampleContent />
+          </DialogContentContainer>
+        }
+      >
+        <IconButton icon={Info} active kind={IconButton.kinds.SECONDARY} />
+      </Dialog>
+    </div>
+  );
+};
 
 <!--- Component documentation -->
 
@@ -40,10 +80,13 @@ The dialog component's purpose is to position a popup component nearby another e
 Please be aware that the dialog component is not responsible for the appearance features of the popup, such as its background color or size.
 
 <Canvas>
-  <Story name="Overview" args={{ prop1: "prop's default value", prop2: "prop's default value" }}>
-    {dialogTemplate.bind({})}
-  </Story>
+  <Story name="Overview">{dialogTemplate.bind({})}</Story>
 </Canvas>
+
+<Tip>
+  For setting the dialog UI appearance, use
+  <Link href="/?path=/docs/inputs-dropdown--overview">DialogContentContainer</Link> component.
+</Tip>
 
 ## Props
 
@@ -53,13 +96,21 @@ Please be aware that the dialog component is not responsible for the appearance 
 
 <UsageGuidelines
   guidelines={[
-    "Dialogs can be positioned above any component, under it, or on any component's right or left side.",
-    "Usually, we will desire to position our dialog component near the component responsible for triggering it.",
-    "Usage guideline 3"
+    "Dialog can appear from top, bottom, left or right to an element",
+    "Usually, the dialog will be positioned next to the triggered element.",
+    <>
+      The Dialog component is mainly used to create customized menus that cannot be developed using our{" "}
+      <Link>Menu</Link> and <Link>MenuButton</Link> components.
+    </>
   ]}
 />
 
-<Tip title="Do you desire to position your pop-up in the center of the page?">
+<AttentionBox
+  title="Trying to implement your own customize menu?"
+  text="Please be sure that what you try implement cannot be achieved by using already implemented simpler components - such as our menu component, because creating an over-complicated UI can hurt user experience."
+/>
+
+<Tip title="Wishing to position your pop over in the center of the page?">
   Exactly for this purpose, we created the <Link href="/?path=/docs/feedback-modal--overview">Modal</Link> component!
   Check it out.
 </Tip>
@@ -68,97 +119,358 @@ Please be aware that the dialog component is not responsible for the appearance 
 
 ### Positions
 
-Description of story 1
-
 <Canvas>
-  <Story name="Story title 1">
-    <Dialog />
-    <Dialog />
+  <Story name="Positions">
+    {() => {
+      // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
+      const { isChecked: checkedTop, onChange: onChangeTop } = useSwitch({ defaultChecked: false });
+      const { isChecked: checkedBottom, onChange: onChangeBottom } = useSwitch({ defaultChecked: false });
+      const { isChecked: checkedRight, onChange: onChangeRight } = useSwitch({ defaultChecked: false });
+      const { isChecked: checkedLeft, onChange: onChangeLeft } = useSwitch({ defaultChecked: false });
+      const modifiers =
+        // for prevent dialog to move while scrolling
+        [
+          {
+            name: "preventOverflow",
+            options: {
+              mainAxis: false
+            }
+          }
+        ];
+      return (
+        <Flex className="monday-storybook-dialog--story-padding" gap={Flex.gaps.MEDIUM}>
+          <Dialog
+            modifiers={modifiers}
+            open={checkedTop}
+            position={Dialog.positions.TOP} // set dialog position
+            showTrigger={[]}
+            hideTrigger={[]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} onClick={onChangeTop} active={checkedTop}>
+              Top
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            position={Dialog.positions.BOTTOM} // set dialog position
+            showTrigger={[]}
+            hideTrigger={[]}
+            open={checkedBottom}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} onClick={onChangeBottom} active={checkedBottom}>
+              Bottom
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            showTrigger={[]}
+            hideTrigger={[]}
+            position={Dialog.positions.RIGHT} // set dialog position
+            open={checkedRight}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} onClick={onChangeRight} active={checkedRight}>
+              Right
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            position={Dialog.positions.LEFT} // set dialog position
+            showTrigger={[]}
+            hideTrigger={[]}
+            open={checkedLeft}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} onClick={onChangeLeft} active={checkedLeft}>
+              Left
+            </Button>
+          </Dialog>
+        </Flex>
+      );
+    }}
   </Story>
 </Canvas>
 
-### Story title 2
+### Dialog show triggers
 
-Description of story 2
+We can chose what will be the related element's trigger which will be responsible for the dialog appearance
 
 <Canvas>
-  <Story name="Story title 2">
-    <Dialog />
-    <Dialog />
+  <Story name="Show triggers">
+    {() => {
+      // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
+      const { checked: clickButtonActive, onChange: onClickClickButton } = useSwitch({ defaultChecked: false });
+      const { checked: hoverButtonActive, onChange: onHoverButton } = useSwitch({ defaultChecked: false });
+      const { checked: focusButtonActive, onChange: onFocusButton } = useSwitch({ defaultChecked: false });
+      const modifiers =
+        // for prevent dialog to move while scrolling
+        [
+          {
+            name: "preventOverflow",
+            options: {
+              mainAxis: false
+            }
+          }
+        ];
+      return (
+        <Flex className="monday-storybook-dialog--story-padding" gap={Flex.gaps.MEDIUM}>
+          <Dialog
+            modifiers={modifiers}
+            showTrigger={[Dialog.hideShowTriggers.CLICK]}
+            hideTrigger={[Dialog.hideShowTriggers.CLICK]}
+            showTrigger={[]}
+            hideTrigger={[]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} active={clickButtonActive} onClick={onClickClickButton}>
+              On click
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            showTrigger={[Dialog.hideShowTriggers.MOUSE_ENTER]}
+            hideTrigger={[Dialog.hideShowTriggers.MOUSE_LEAVE]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <div onMouseEnter={onHoverButton} onMouseLeave={onHoverButton}>
+              <Button kind={Button.kinds.SECONDARY} active={hoverButtonActive}>
+                On mouse enter
+              </Button>
+            </div>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            showTrigger={[]}
+            hideTrigger={[]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button
+              onFocus={onFocusButton}
+              onBlur={onFocusButton}
+              kind={Button.kinds.SECONDARY}
+              active={focusButtonActive}
+            >
+              On focus
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            showTrigger={[]}
+            hideTrigger={[]}
+            position={Dialog.positions.RIGHT}
+            content={
+              <DialogContentContainer>
+                <ExampleContent />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} active>
+              On mount
+            </Button>
+          </Dialog>
+        </Flex>
+      );
+    }}
   </Story>
 </Canvas>
 
-## Do’s and Don’ts
+### Dialog hide triggers
 
-<ComponentRules
-  rules={[
-    {
-      positive: {
-        component: <Dialog />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Dialog />,
-        description: "Bad practice description."
-      }
-    },
-    {
-      positive: {
-        component: <Dialog />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Dialog />,
-        description: "Bad practice description."
-      }
-    },
-    {
-      positive: {
-        component: <Dialog />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Dialog />,
-        description: "Bad practice description."
-      }
-    },
-    {
-      positive: {
-        component: <Dialog />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Dialog />,
-        description: "Bad practice description."
-      }
-    }
-  ]}
-/>
+We can set the triggers which will be responsible for hide the dialog
+
+<Canvas>
+  <Story name="Hide triggers">
+    {() => {
+      // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
+      const { isChecked: clickButtonActive, onChange: switchClickButtonActive } = useSwitch({ defaultChecked: true });
+      const { isChecked: clickOutsideButtonActive, onChange: switchClickOutsideActive } = useSwitch({
+        defaultChecked: true
+      });
+      const { isChecked: mouseLeaveButtonActive, onChange: switchMouseLeaveActive } = useSwitch({
+        defaultChecked: true
+      });
+      const { isChecked: blurButtonActive, onChange: switchBlurButtonActive } = useSwitch({ defaultChecked: true });
+      const { isChecked: contentClickButtonActive, onChange: switchContentClickActive } = useSwitch({
+        defaultChecked: true
+      });
+      const modifiers =
+        // for prevent dialog to move while scrolling
+        [
+          {
+            name: "preventOverflow",
+            options: {
+              mainAxis: false
+            }
+          }
+        ];
+      return (
+        <Flex
+          className="monday-storybook-dialog_hide-triggers-story"
+          wrap
+          direction={Flex.directions.COLUMN}
+          justify={Flex.justify.START}
+          align={Flex.align.START}
+        >
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            onClickOutside={switchClickOutsideActive}
+            position={Dialog.positions.RIGHT}
+            showTrigger={[Dialog.hideShowTriggers.CLICK]}
+            hideTrigger={[Dialog.hideShowTriggers.CLICK_OUTSIDE]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent rowsCount={1} />
+              </DialogContentContainer>
+            }
+          >
+            <Button
+              kind={Button.kinds.SECONDARY}
+              active={clickOutsideButtonActive}
+              onClick={switchClickOutsideActive}
+              style={{ marginBlock: "54px" }}
+            >
+              On click outside
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            position={Dialog.positions.RIGHT}
+            showTrigger={[Dialog.hideShowTriggers.CLICK]}
+            hideTrigger={[Dialog.hideShowTriggers.CLICK]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent rowsCount={1} />
+              </DialogContentContainer>
+            }
+          >
+            <Button
+              kind={Button.kinds.SECONDARY}
+              active={clickButtonActive}
+              onClick={switchClickButtonActive}
+              style={{ marginBlock: "54px" }}
+            >
+              On click
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            position={Dialog.positions.RIGHT}
+            showTrigger={[Dialog.hideShowTriggers.FOCUS, Dialog.hideShowTriggers.CLICK]}
+            hideTrigger={[Dialog.hideShowTriggers.BLUR]}
+            content={
+              <DialogContentContainer>
+                <ExampleContent rowsCount={1} />
+              </DialogContentContainer>
+            }
+          >
+            <Button
+              kind={Button.kinds.SECONDARY}
+              active={blurButtonActive}
+              onClick={switchBlurButtonActive}
+              style={{ marginBlock: "54px" }}
+            >
+              On blur
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            position={Dialog.positions.RIGHT}
+            showTrigger={[Dialog.hideShowTriggers.CLICK]}
+            hideTrigger={[Dialog.hideShowTriggers.CONTENT_CLICK]}
+            onContentClick={switchContentClickActive}
+            content={
+              <DialogContentContainer>
+                <ExampleContent rowsCount={1} />
+              </DialogContentContainer>
+            }
+          >
+            <Button
+              kind={Button.kinds.SECONDARY}
+              active={contentClickButtonActive}
+              onClick={switchContentClickActive}
+              style={{ marginBlock: "54px" }}
+            >
+              On content click
+            </Button>
+          </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            showTrigger={[Dialog.hideShowTriggers.MOUSE_ENTER]}
+            hideTrigger={[Dialog.hideShowTriggers.MOUSE_LEAVE]}
+            position={Dialog.positions.RIGHT}
+            onDialogDidHide={switchMouseLeaveActive}
+            onDialogDidShow={switchMouseLeaveActive}
+            content={
+              <DialogContentContainer>
+                <ExampleContent rowsCount={1} />
+              </DialogContentContainer>
+            }
+          >
+            <Button
+              kind={Button.kinds.SECONDARY}
+              active={mouseLeaveButtonActive}
+              onClick={switchMouseLeaveActive}
+              style={{ marginBlock: "54px" }}
+            >
+              On mouse leave
+            </Button>
+          </Dialog>
+        </Flex>
+      );
+    }}
+  </Story>
+</Canvas>
 
 ## Use cases and examples
 
-### Story title 3
+### Control dialog show / hide states without triggers
 
-Description of story 3
+<b> Coming soon </b>
 
-<Canvas>
-  <Story name="Story title 3">
-    <Dialog />
-    <Dialog />
-  </Story>
-</Canvas>
+### Dialog inside scrollable container
 
-### Story title 4
+<b> Coming soon </b>
 
-Description of story 4
+### Dialog for implementing customize menus
 
-<Canvas>
-  <Story name="Story title 4">
-    <Dialog />
-    <Dialog />
-  </Story>
-</Canvas>
+<b> Coming soon </b>
 
 ## Related components
 
-<RelatedComponents componentsNames={[]} />
+<RelatedComponents componentsNames={[MENU, TOOLTIP, DIALOG_CONTENT_CONTAINER]} />
