--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -85,7 +85,10 @@ Please be aware that the dialog component is not responsible for the appearance 
 
 <Tip>
   For setting the dialog UI appearance, use
-  <Link href="/?path=/docs/inputs-dropdown--overview">DialogContentContainer</Link> component.
+  <Link size={Link.sizes.SMALL} href="/?path=/docs/popover-dialogcontentcontainer--overview">
+    DialogContentContainer
+  </Link>
+  component.
 </Tip>
 
 ## Props
@@ -98,10 +101,12 @@ Please be aware that the dialog component is not responsible for the appearance 
   guidelines={[
     "Dialog can appear from top, bottom, left or right to an element",
     "Usually, the dialog will be positioned next to the triggered element.",
-    <>
-      The Dialog component is mainly used to create customized menus that cannot be developed using our{" "}
-      <Link>Menu</Link> and <Link>MenuButton</Link> components.
-    </>
+    <span>
+      The Dialog component is mainly used to create customized menus that cannot be developed using our
+      <Link href="/?path=/docs/navigation-menu-menu--overview">Menu</Link> and <Link href="?path=/docs/buttons-menubutton--overview">
+        MenuButton
+      </Link> components.
+    </span>
   ]}
 />
 
@@ -111,8 +116,11 @@ Please be aware that the dialog component is not responsible for the appearance 
 />
 
 <Tip title="Wishing to position your pop over in the center of the page?">
-  Exactly for this purpose, we created the <Link href="/?path=/docs/feedback-modal--overview">Modal</Link> component!
-  Check it out.
+  Exactly for this purpose, we created the
+  <Link href="/?path=/docs/feedback-modal--overview" size={Link.sizes.SMALL}>
+    Modal
+  </Link>
+  component! Check it out.
 </Tip>
 
 ## Variants
