Remove dot at the end of sentance in usages section

--- a/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
+++ b/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
@@ -91,7 +91,7 @@ Accordion is a vertically stacked list of items. Each item can be "expanded" or 
     "Use accordion reduce clutter and chunk the information one by one",
     "Accordion Label must be short, clear, and understandable to indicate what's inside",
     "Default state of accordion is closed unless used for navigation",
-    "Accordion content can include icons, radio buttons, and checkboxes."
+    "Accordion content can include icons, radio buttons, and checkboxes"
   ]}
 />
 
